<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_Search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="searchChemical"
        android:text="@string/button_Search"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_Search_Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_Search_Text" />

    <EditText
        android:id="@+id/et_Search_Text"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:ems="10"
        android:hint="@string/Edit_Text_keyword"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/btn_Search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_chemical_by_search" />

    <!--
        <ImageButton
            android:id="@+id/ibtn_add"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_Search"
            app:srcCompat="@android:drawable/ic_input_add"
            tools:layout_editor_absoluteX="316dp" />

        <TextView
            android:id="@+id/tv_add_chemical_manually"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="24dp"

            android:text="Add Chemical Manually"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/ibtn_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_Search_Text" />
    -->

    <EditText
        android:id="@+id/et_Volumn"
        android:layout_width="76dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:autofillHints="100"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/SolutionVolumn"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_SolutionVolumn"
        app:layout_constraintStart_toEndOf="@+id/tv_SolutionVolumn" />

    <TextView
        android:id="@+id/tv_Volumn_Unit"
        android:layout_width="24dp"
        android:layout_height="15dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/VolumnUnit"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_Volumn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/et_Volumn" />

    <TextView
        android:id="@+id/tv_add_chemical_by_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="36dp"
        android:text="@string/SearchLabel"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_SolutionVolumn" />

    <TextView
        android:id="@+id/tv_SolutionVolumn"
        android:layout_width="203dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/SolutionVolumnLabel"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/et_Volumn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lv_chemical"
        android:layout_width="356dp"
        android:layout_height="439dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imb_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/Image_add"
        app:layout_constraintBottom_toTopOf="@+id/lv_chemical"
        app:layout_constraintEnd_toStartOf="@+id/btn_upgrade"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Search"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_input_add" />

    <Button
        android:id="@+id/btn_upgrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/button_upgrade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Search" />


</androidx.constraintlayout.widget.ConstraintLayout>